Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-35361

Missing seqno ack on stream reconnect

    XMLWordPrintable

Details

    • Triaged
    • No
    • KV-Engine MH Beta part 2

    Description

      We need to seqno ack when we create a new passive stream (or reconnect) for non-empty vBuckets to ensure that the active node can commit (may have an infinite timeout SyncWrite due to warmup or promotion so we could otherwise block a key forever).

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              ben.huddleston Ben Huddleston
              ben.huddleston Ben Huddleston
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty